Fix hero-content centering and remove extra margin

--- a/style.css
+++ b/style.css
@@ -589,8 +589,12 @@ background-color: #f7f7f7;
   width: 100%;
   margin-bottom: 30px;
 }
-
-
+.faq-question {
+  font-size: 13px;
+}
+.faq-answer {
+  font-size: 13px;
+}
 }
 @media(min-width: 320px) and (max-width: 440px) {
   #nav-link{
@@ -653,11 +657,10 @@ letter-spacing: 2px;
 
 .hero {
   margin-top: 70px;
-  margin-left: 30px;
-  margin-right: 30px;
-
-  display: flex;
- flex-direction: column;
+   display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 .container {
   order: 1;
@@ -672,50 +675,58 @@ letter-spacing: 2px;
   border-top-left-radius: 80px;
   position: absolute;
   bottom: -50px;
-  right: -30px;
+  right: 0px;
   z-index: 0;
-  width: 90vw;
-  height: 40vh;
+  width: 80%;
+  height: 100%;
 }
 .img{
-  height: 40vh;
-   width: 90vw;
+  height: 50%;
+  width: 80%;
   position: relative;
   margin-right: 50px;
- z-index: 1;
+  z-index: 1;
 }
 .hero-content {
-   order: 2;
-
-   margin: auto;
-     width: 100%;
-
+order: 2;
+width: 100%;
+margin-right: 50px;
+display: flex;
+flex-direction: column;
+align-items: center;
+justify-content: center;
+text-align: center;
+gap: 15px;
 }
 .hero h1 {
-  text-align: center;
+  margin: 0;
   font-size: 30px;
-      width: 100%;
-      margin: auto;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
 }
 .hero p {
+   font-size: 25px;
+   margin: 0 30px;
+     align-items: center;
+   justify-content: center;
     text-align: center;
-  
-    font-size: 20px;
 }
 .button {
-  width: 100%;
- margin: auto;
+display: flex;
+gap: 3px;
+justify-content: center;
 
- text-align: center;
 }
-.btn-chrome {
+.button a {
+    font-size: 15px;
+}
+.btn-chrome .btn-firefox{
   padding: 15px;
-  font-size: 20px;
+  font-size: 1px;
 }
-.btn-firefox {
-    padding: 15px;
-  font-size: 20px;
-}
+
+
 
 .FEATURES {
 text-align: center;
@@ -745,38 +756,35 @@ width: 80%;
   border-bottom: 2px solid #dfdfde;
   padding-bottom: 10px;
 }
-
 .section-1 {
   flex-direction: column;
   margin-top: 50px;
   margin-bottom: 100px;
 }
-
 .container2 {
  position: relative;
-  display: inline-block;
+ display: inline-block;
 }
 .decktop-section1-img {
   background-color: #0046ff;
   border-bottom-right-radius: 80px;
   border-top-right-radius: 80px;
-  width: 80%;
   position: absolute;
   bottom: -70px;
-  left: -20px;
   z-index: 0;
-  height: 40vh;
+  width: 80%;
+  height: 100%;
 }
 .section-1-img {
+  height: 50%;
   width: 80%;
-  height: 40vh;
   position: relative;
   z-index: 1;
   border-radius: 10px;
 }
 .content2 {
   width: 80%;
-margin: auto;
+  margin: auto;
    margin-top: 50px;
   text-align: center;
 }
